--- a/public/mailing/style.less
+++ b/public/mailing/style.less
@@ -179,6 +179,7 @@ h2.main-title {
 
       .category-header{
         .upnav{
+          position: relative;
           margin-bottom: 27px;
           h1{
             a{
@@ -191,12 +192,40 @@ h2.main-title {
           }
         }
         .gnb{
+          position: absolute;
+          right: 0;
+          bottom: 0;
           ul{
             font-size: 0;
             li{
               display: inline-block;
+              margin-left: 16px;
               a{
                 display: block;
+                span{
+                  font-size: 10px;
+                  font-weight: 600;
+                  color: #313131;
+                }
+
+              }
+              .icon{
+                display: block;
+                margin: 0 auto;
+                width: 16px;
+                height: 16px;
+                background-repeat: no-repeat;
+
+              }
+              .mysid-link{
+                .icon{
+                  background-image: url(images/my.png);
+                }
+              }
+              .category-link{
+                .icon{
+                  background-image: url(images/category.png);
+                }
               }
             }
           }
@@ -351,6 +380,12 @@ h2.main-title {
           }
         }
       }
+      .copyright{
+        margin-top: 23px;
+        font-size: 11px;
+        color: #898989;
+        text-align: center;
+      }
     }
   }
 }
@@ -442,8 +477,10 @@ h2.main-title {
             li{
               span{
                 font-size: 12px;
+                text-transform: capitalize;
               }
               strong{
+                padding-left: 10px;
                 font-weight: 400;
               }
             }
