--- a/public/market-m/style.css
+++ b/public/market-m/style.css
@@ -18,8 +18,8 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Open Sans', 'Noto Sans KR', sans-serif !important;
-  background-color: #fff;
+  font-family: 'Open Sans', 'Noto Sans KR', sans-serif;
+  background-color: #dcdcdc;
   overflow-x: hidden;
 }
 body,
@@ -27,6 +27,7 @@ button,
 input,
 select,
 textarea {
+  font-family: 'Open Sans', 'Noto Sans KR', sans-serif;
   font-size: 13px;
   color: #1b1b1b;
   line-height: 1.5;
@@ -170,9 +171,6 @@ h2.main-title {
   width: 16px;
   height: 16px;
   background: url('sprite/css_sprites.png') -123px -66px;
-}
-.main-content {
-  background-color: #dcdcdc;
 }
 .main-content .market-main_top-banner ul {
   font-size: 0;
@@ -767,6 +765,62 @@ h2.main-title {
 .product-detail .product_packing_and_delivery .product_inner-wrap h2 {
   border-bottom: none;
 }
+.product-detail-intro .detail-intro_nav {
+  padding: 9px 25px;
+  height: 50px;
+  background-color: #e5e5e5;
+}
+.product-detail-intro .detail-intro_nav ul {
+  font-size: 0;
+}
+.product-detail-intro .detail-intro_nav ul li {
+  position: relative;
+  display: inline-block;
+  padding-right: 33px;
+}
+.product-detail-intro .detail-intro_nav ul li a {
+  padding-bottom: 11px;
+  font-size: 20px;
+  color: #1b1b1b;
+}
+.product-detail-intro .detail-intro_nav ul li a:hover {
+  color: #eb0009;
+  border-bottom: 1px solid #eb0009;
+}
+.product-detail-intro .detail-intro_nav ul li:before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: -17px;
+  display: block;
+  width: 1px;
+  height: 17px;
+  background-color: #959595;
+}
+.product-detail-intro .detail-intro_nav ul li:first-child:before {
+  display: none;
+}
+.product-detail-intro .detail-intro_contents {
+  padding: 19px 25px 28px;
+  background-color: #fff;
+}
+.product-detail-intro .detail-intro_contents .contents-table {
+  font-size: 16px;
+}
+.product-detail-intro .detail-intro_contents .contents-table table {
+  border-collapse: collapse;
+}
+.product-detail-intro .detail-intro_contents .contents-table table tr th {
+  width: 148px;
+  font-weight: 400;
+  color: #707070;
+  text-align: right;
+  vertical-align: top;
+}
+.product-detail-intro .detail-intro_contents .contents-table table tr td {
+  padding-left: 13px;
+  vertical-align: top;
+}
 .sign-up {
   padding: 150px 20px;
   background-color: #fff;
@@ -964,4 +1018,274 @@ h2.main-title {
 .m-footer .copyright-wrap {
   font-size: 13px;
   text-align: center;
+}
+.inquiry .inquiry-head {
+  padding: 0.8rem 2.5rem;
+  height: 5rem;
+  background-color: #fff;
+  border-bottom: 1px solid #d3d3d3;
+}
+.inquiry .inquiry-head h2 {
+  font-size: 2.1rem;
+  font-weight: 400;
+}
+.inquiry h3 {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.inquiry .inquiry_top {
+  margin-bottom: 2.5rem;
+  background-color: #fff;
+  box-shadow: 0px 1px 4px 0px rgba(6, 0, 1, 0.35);
+}
+.inquiry .inquiry_bottom {
+  background-color: #fff;
+  box-shadow: 0px 1px 4px 0px rgba(6, 0, 1, 0.35);
+}
+.inquiry .inquiry_product {
+  padding: 1.8rem 1.5rem 3.5rem;
+}
+.inquiry .inquiry_product .inquiry_product-name .product-name {
+  display: block;
+  margin-top: 4px;
+  font-size: 1.7rem;
+  font-weight: 400;
+  line-height: 1.3;
+}
+.inquiry .inquiry_product .inquiry_product-info {
+  margin-top: 2.7rem;
+}
+.inquiry .inquiry_product .inquiry_product-info .product-quantity {
+  float: left;
+  width: calc(50% - 5px);
+}
+.inquiry .inquiry_product .inquiry_product-info .product-quantity .quantity-wrap {
+  margin-top: 5px;
+  font-size: 2rem;
+  border-bottom: 1px solid #898989;
+}
+.inquiry .inquiry_product .inquiry_product-info .product-quantity .quantity-wrap .quantity {
+  font-weight: 400;
+}
+.inquiry .inquiry_product .inquiry_product-info .product-quantity .quantity-wrap span {
+  float: right;
+}
+.inquiry .inquiry_product .inquiry_product-info .product-offer {
+  float: left;
+  margin-left: 10px;
+  width: calc(50% - 5px);
+}
+.inquiry .inquiry_product .inquiry_product-info .product-offer .offer-wrap {
+  margin-top: 5px;
+  font-size: 2rem;
+  border-bottom: 1px solid #898989;
+}
+.inquiry .inquiry_product .inquiry_product-info .product-offer .offer-wrap .price {
+  margin-left: 20px;
+  font-weight: 400;
+}
+.inquiry .inquiry_requirements h3 {
+  padding: 1.8rem 1.5rem 0.4rem;
+}
+.inquiry .inquiry_requirements h5 {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.inquiry .inquiry_requirements .requirements-list ul li {
+  padding: 0 1.5rem;
+  border-bottom: 1px solid #dcdcdc;
+}
+.inquiry .inquiry_requirements .requirements-list ul li > a {
+  display: block;
+  padding: 13px 0;
+  font-size: 2rem;
+  color: #959595;
+}
+.inquiry .inquiry_requirements .requirements-list ul li > a h4 {
+  font-weight: 400;
+}
+.inquiry .inquiry_requirements .requirements-list ul li > div {
+  padding-bottom: 4.3rem;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap {
+  position: relative;
+  margin-top: 2px;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap input {
+  width: 100%;
+  font-size: 2rem;
+  border: none;
+  border-bottom: 1px solid #898989;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap input::-webkit-input-placeholder {
+  font-size: 2rem;
+  color: #c9c9c9;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap textarea {
+  margin-top: -2px;
+  width: 100%;
+  height: 7.8rem;
+  font-size: 2rem;
+  border: none;
+  border-bottom: 1px solid #898989;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap textarea::-webkit-input-placeholder {
+  font-size: 2rem;
+  color: #d2d2d2;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap .character-count {
+  position: absolute;
+  right: 0;
+  bottom: -21px;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap .character-count span {
+  font-size: 1.5rem;
+  color: #898989;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .input-wrap span.unit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 2rem;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .price-offer .price-offer_quantity {
+  float: left;
+  width: calc(50% - 5px);
+}
+.inquiry .inquiry_requirements .requirements-list ul li .price-offer .price-offe_offer {
+  float: left;
+  margin-left: 10px;
+  width: calc(50% - 5px);
+}
+.inquiry .inquiry_requirements .requirements-list ul li .price-offer .price-offe_offer .input-wrap input {
+  padding-left: 8.5rem;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .price-offer .price-offe_offer .input-wrap input::-webkit-input-placeholder {
+  display: block;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .price-offer .price-offe_offer .input-wrap span.scc_currency3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 2rem;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .sample-request .sample-request_quantity {
+  width: calc(50% - 5px);
+}
+.inquiry .inquiry_requirements .requirements-list ul li .sample-request .sample-request_address {
+  margin-top: 1.8rem;
+}
+.inquiry .inquiry_requirements .requirements-list ul li .sample-request .sample-request_address .remark {
+  display: block;
+  margin-top: 1.5rem;
+  font-size: 1.5rem;
+  color: #959595;
+}
+.inquiry .inquiry_requirements .requirements-list ul li:last-child {
+  border-bottom: none;
+}
+.inquiry .btn-wrap {
+  margin-top: 20px;
+  padding: 0 1.5rem;
+}
+.inquiry .btn-wrap .btn {
+  width: 100%;
+  height: 4.5rem;
+  font-size: 2rem;
+  color: #fff;
+  border-radius: 3px;
+  background-color: #eb0009;
+}
+.rfq .rfq-wrap {
+  background-color: #fff;
+  box-shadow: 0px 1px 4px 0px rgba(6, 0, 1, 0.35);
+}
+.rfq .btn-wrap {
+  margin-top: 2rem;
+  padding: 0 1.5rem;
+}
+.rfq .btn-wrap .btn {
+  width: 100%;
+  height: 4.5rem;
+  font-size: 2rem;
+  color: #fff;
+  border-radius: 3px;
+  background-color: #eb0009;
+}
+.rfq .rfq-head {
+  padding: 1.1rem 2.5rem;
+  height: 5rem;
+  border-bottom: 1px solid #d3d3d3;
+}
+.rfq .rfq-head h2 {
+  font-size: 2.1rem;
+  font-weight: 400;
+}
+.rfq .rfq-main {
+  padding: 1.8rem 1.5rem 10rem;
+}
+.rfq .rfq-main label {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.rfq .rfq-main .rfq_quantity {
+  margin-top: 3.2rem;
+}
+.rfq .rfq-main .rfq_quantity .product-quantity {
+  float: left;
+  width: calc(50% - 5px);
+}
+.rfq .rfq-main .rfq_quantity .product-unit {
+  float: left;
+  margin-left: 10px;
+  width: calc(50% - 5px);
+}
+.rfq .rfq-main .rfq_quantity .product-unit .input-wrap {
+  margin-top: 10px;
+}
+.rfq .rfq-main .rfq_details {
+  margin-top: 5.3rem;
+}
+.rfq .rfq-main .input-wrap {
+  position: relative;
+  margin-top: 2px;
+}
+.rfq .rfq-main .input-wrap input {
+  width: 100%;
+  font-size: 2rem;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #898989;
+}
+.rfq .rfq-main .input-wrap input::-webkit-input-placeholder {
+  font-size: 2rem;
+  color: #c9c9c9;
+}
+.rfq .rfq-main .input-wrap select {
+  width: 100%;
+  font-size: 2rem;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #898989;
+}
+.rfq .rfq-main .input-wrap textarea {
+  width: 100%;
+  height: 7.8rem;
+  font-size: 2rem;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #898989;
+}
+.rfq .rfq-main .input-wrap textarea::-webkit-input-placeholder {
+  font-size: 2rem;
+  color: #c9c9c9;
+}
+.rfq .rfq-main .input-wrap .character-count {
+  position: absolute;
+  right: 0;
+  bottom: -26px;
+}
+.rfq .rfq-main .input-wrap .character-count span {
+  font-size: 1.5rem;
+  color: #898989;
 }
