--- a/public/market-m/style.less
+++ b/public/market-m/style.less
@@ -18,6 +18,7 @@ html {
 
 body {
     .font-size(); // Uses the default font-size of 16
+
 }
 
 *,
@@ -34,8 +35,8 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Open Sans', 'Noto Sans KR',sans-serif !important;
-  background-color: #fff;
+  font-family: 'Open Sans', 'Noto Sans KR',sans-serif;
+  background-color: #dcdcdc;
   overflow-x: hidden;
 }
 
@@ -44,6 +45,7 @@ button,
 input,
 select,
 textarea {
+  font-family: 'Open Sans', 'Noto Sans KR',sans-serif;
   font-size: 13px;
   color: #1b1b1b;
   line-height: 1.5;
@@ -217,7 +219,7 @@ h2.main-title {
 //
 // }
 .main-content{
-  background-color: #dcdcdc;
+
   .market-main_top-banner{
     ul{
       font-size: 0;
@@ -926,6 +928,72 @@ h2.main-title {
     }
   }
 }
+.product-detail-intro{
+  .detail-intro_nav{
+    padding: 9px 25px;
+    height: 50px;
+
+  background-color: #e5e5e5;
+    ul{
+      font-size: 0;
+      li{
+        position: relative;
+        display: inline-block;
+        padding-right: 33px;
+        a{
+          padding-bottom: 11px;
+          font-size: 20px;
+          color: @black;
+          &:hover{
+            color: @red;
+            border-bottom: 1px solid @red;
+          }
+        }
+        &:before{
+          content: "";
+          position: absolute;
+          top: 7px;
+          left: -17px;
+          display: block;
+          width: 1px;
+          height: 17px;
+          background-color: #959595;
+
+        }
+        &:first-child{
+          &:before{
+            display: none;
+          }
+        }
+      }
+    }
+  }
+  .detail-intro_contents{
+    padding: 19px 25px 28px;
+    background-color: #fff;
+    .contents-table{
+      font-size: 16px;
+      table{
+        border-collapse: collapse;
+        tr{
+
+          th{
+            width: 148px;
+            font-weight: 400;
+            color: @font-gray;
+            text-align: right;
+            vertical-align: top;
+          }
+          td{
+            padding-left: 13px;
+            vertical-align: top;
+          }
+        }
+      }
+
+    }
+  }
+}
 
 
 .sign-up {
@@ -1184,6 +1252,308 @@ h2.main-title {
     text-align: center;
   }
 
+}
+
+.inquiry{
+  .inquiry-head{
+    padding: 0.8rem 2.5rem;
+    height: 5rem;
+    background-color: #fff;
+    border-bottom: 1px solid #d3d3d3;
+    h2{
+      font-size: 2.1rem;
+      font-weight: 400;
+    }
+  }
+
+  h3{
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  .inquiry_top{
+    margin-bottom: 2.5rem;
+    background-color: #fff;
+    box-shadow: 0px 1px 4px 0px rgba(6, 0, 1, 0.35);
+
+  }
+  .inquiry_bottom{
+    background-color: #fff;
+    box-shadow: 0px 1px 4px 0px rgba(6, 0, 1, 0.35);
+  }
+  .inquiry_product{
+    padding: 1.8rem 1.5rem 3.5rem;
+    .inquiry_product-name{
+      .product-name{
+        display: block;
+        margin-top: 4px;
+        font-size: 1.7rem;
+        font-weight: 400;
+        line-height: 1.3;
+      }
+    }
+    .inquiry_product-info{
+      margin-top: 2.7rem;
+      .product-quantity{
+        float: left;
+        width: calc(~"50%" - 5px);
+        .quantity-wrap{
+          margin-top: 5px;
+          font-size: 2rem;
+          border-bottom: 1px solid #898989;
+          .quantity{
+            font-weight: 400;
+          }
+          span{
+            float: right;
+          }
+        }
+      }
+      .product-offer{
+        float: left;
+        margin-left: 10px;
+        width: calc(~"50%" - 5px);
+        .offer-wrap{
+          margin-top: 5px;
+          font-size: 2rem;
+          border-bottom: 1px solid #898989;
+          .price{
+            margin-left: 20px;
+            font-weight: 400;
+          }
+        }
+      }
+    }
+
+  }
+  .inquiry_requirements{
+    h3{
+      padding: 1.8rem 1.5rem 0.4rem;
+    }
+    h5{
+      font-size: 1.3rem;
+      font-weight: 600;
+    }
+    .requirements-list{
+      ul{
+        li{
+          padding: 0 1.5rem;
+
+          border-bottom: 1px solid #dcdcdc;
+          >a{
+            display: block;
+            padding: 13px 0;
+            font-size: 2rem;
+            color: #959595;
+            h4{
+              font-weight: 400;
+            }
+          }
+          >div{
+            // display: none;
+            padding-bottom: 4.3rem;
+          }
+          .input-wrap{
+            position: relative;
+            margin-top: 2px;
+            input{
+              width: 100%;
+              font-size: 2rem;
+              border: none;
+              border-bottom: 1px solid #898989;
+              &::-webkit-input-placeholder{
+                font-size: 2rem;
+                color: #c9c9c9;
+
+              }
+            }
+            textarea{
+              margin-top: -2px;
+              width: 100%;
+              height: 7.8rem;
+              font-size: 2rem;
+              border: none;
+              border-bottom: 1px solid #898989;
+              &::-webkit-input-placeholder{
+                font-size: 2rem;
+                color: #d2d2d2;
+              }
+
+            }
+            .character-count{
+              position: absolute;
+              right: 0;
+              bottom: -21px;
+              span{
+                font-size: 1.5rem;
+                color: #898989;
+              }
+            }
+            span.unit{
+              position: absolute;
+              top: 0;
+              right: 0;
+              font-size: 2rem;
+            }
+          }
+          .price-offer{
+            .price-offer_quantity{
+              float: left;
+              width: calc(~"50%" - 5px);
+            }
+            .price-offe_offer{
+              float: left;
+              margin-left: 10px;
+              width: calc(~"50%" - 5px);
+              .input-wrap{
+                input{
+                  padding-left: 8.5rem;
+                  &::-webkit-input-placeholder{
+                    display: block;
+
+                  }
+                }
+                span.scc_currency3{
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  font-size: 2rem;
+                }
+              }
+            }
+
+          }
+          .sample-request{
+            .sample-request_quantity{
+              width: calc(~"50%" - 5px);
+            }
+            .sample-request_address{
+              margin-top: 1.8rem;
+              .remark{
+                display: block;
+                margin-top: 1.5rem;
+                font-size: 1.5rem;
+                color: #959595;
+              }
+            }
+          }
+
+          &:last-child{
+            border-bottom: none;
+          }
+        }
+      }
+    }
+  }
+  .btn-wrap{
+    margin-top: 20px;
+    padding: 0 1.5rem;
+    .btn{
+      width: 100%;
+      height: 4.5rem;
+      font-size: 2rem;
+      color: #fff;
+      border-radius: 3px;
+      background-color: @red;
+    }
+  }
+
+
+}
+.rfq{
+  .rfq-wrap{
+    background-color: #fff;
+    box-shadow: 0px 1px 4px 0px rgba(6, 0, 1, 0.35);
+  }
+  .btn-wrap{
+    margin-top: 2rem;
+    padding: 0 1.5rem;
+    .btn{
+      width: 100%;
+      height: 4.5rem;
+      font-size: 2rem;
+      color: #fff;
+      border-radius: 3px;
+      background-color: @red;
+    }
+  }
+  .rfq-head{
+    padding: 1.1rem 2.5rem;
+    height: 5rem;
+
+    border-bottom: 1px solid #d3d3d3;
+    h2{
+      font-size: 2.1rem;
+      font-weight: 400;
+    }
+  }
+  .rfq-main{
+    padding: 1.8rem 1.5rem 10rem;
+    label{
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    .rfq_quantity{
+      margin-top: 3.2rem;
+      .product-quantity{
+        float: left;
+        width: calc(~"50%" - 5px);
+      }
+      .product-unit{
+        float: left;
+        margin-left: 10px;
+        width: calc(~"50%" - 5px);
+        .input-wrap{
+          margin-top: 10px;
+        }
+      }
+    }
+    .rfq_details{
+      margin-top: 5.3rem;
+    }
+    .input-wrap{
+      position: relative;
+      margin-top: 2px;
+      input{
+        width: 100%;
+        font-size: 2rem;
+        border: none;
+        border-radius: 0;
+        border-bottom: 1px solid #898989;
+        &::-webkit-input-placeholder{
+          font-size: 2rem;
+          color: #c9c9c9;
+        }
+      }
+      select{
+        width: 100%;
+        font-size: 2rem;
+        border: none;
+        border-radius: 0;
+        border-bottom: 1px solid #898989;
+      }
+      textarea{
+        width: 100%;
+        height: 7.8rem;
+        font-size: 2rem;
+        border: none;
+        border-radius: 0;
+        border-bottom: 1px solid #898989;
+        &::-webkit-input-placeholder{
+          font-size: 2rem;
+          color: #c9c9c9;
+        }
+      }
+      .character-count{
+        position: absolute;
+        right: 0;
+        bottom: -26px;
+        span{
+          font-size: 1.5rem;
+          color: #898989;
+        }
+      }
+    }
+  }
 }
 
 // @media screen and (max-width: 480px){
